--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f8f8f8;
-    color: #333;
+    background-color: #e90893de;
+    color: #faf8f8;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,7 +15,7 @@ body {
 }
 
 h1 {
-    color: red;
+    color: rgba(255, 253, 254, 0);
     text-align: center;
     margin-bottom: 20px;
 }
@@ -47,7 +47,7 @@ input, button {
 }
 
 button {
-    background-color: red;
+    background-color: rgba(255, 0, 221, 0.404);
     color: white;
     font-weight: bold;
     border: none;
@@ -55,14 +55,14 @@ button {
 }
 
 button:hover {
-    background-color: darkred;
+    background-color: rgb(240, 12, 172);
 }
 
 p {
     font-size: 18px;
     text-align: center;
     margin-top: 10px;
-    color: red;
+    color: rgba(255, 0, 0, 0);
 }
 
 span {
