--- a/style.css
+++ b/style.css
@@ -15,13 +15,13 @@ body {
 }
 
 h1 {
-    color: rgba(255, 253, 254, 0);
+    color: rgb(0, 0, 0);
     text-align: center;
     margin-bottom: 20px;
 }
 
 h2 {
-    color: #444;
+    color: #44444400;
     text-align: center;
     margin-top: 40px;
     margin-bottom: 20px;
@@ -42,7 +42,7 @@ input, button {
     padding: 12px;
     margin: 10px 0;
     border-radius: 5px;
-    border: 1px solid #ccc;
+    border: 1px solid #db1682f3;
     font-size: 16px;
 }
 
