--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h1 {
 }
 
 h2 {
-    color: #44444400;
+    color: #0e0e0e;
     text-align: center;
     margin-top: 40px;
     margin-bottom: 20px;
