--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ h2 {
 section {
     width: 100%;
     max-width: 500px;
-    background: rgb(2, 2, 2);
+    background: rgba(2, 2, 2, 0);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
@@ -66,6 +66,7 @@ p {
 }
 
 span {
+    color: #0e0e0e;
     font-weight: bold;
 }
 
