--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ h2 {
 section {
     width: 100%;
     max-width: 500px;
-    background: rgba(2, 2, 2, 0);
+    background:rgb(255, 255, 255);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
