--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ p {
     font-size: 18px;
     text-align: center;
     margin-top: 10px;
-    color: rgba(255, 0, 0, 0);
+    color:rgb(22, 21, 21);
 }
 
 span {
